Add optional CTA link to research stage data for Grimoire use